@@ -114,21 +114,29 @@
     </distributionManagement>
 
     <properties>
+        <!-- Java Settings -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.testSource>1.8</maven.compiler.testSource>
         <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
 
+        <!-- Checkstyle / Copyright -->
         <checkstyle.configLocation>checkstyle.xml</checkstyle.configLocation>
         <copyright>2018</copyright>
 
+        <!-- Github Settings -->
         <github.global.server>github</github.global.server>
 
+        <!-- Probe version settings -->
         <probe.version>${project.version} (built at ${maven.build.timestamp})</probe.version>
 
+        <!-- Project build settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!-- Surefire Settings -->
+        <argLine>-javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</argLine>
 
         <!-- Dependency Versions -->
         <activation.version>1.2.0</activation.version>
@@ -137,7 +145,7 @@
         <beanutils.version>1.9.3</beanutils.version>
         <bonecp.version>0.8.0.RELEASE</bonecp.version>
         <c3p0.version>0.9.5.2</c3p0.version>
-        <checker.version>2.5.5</checker.version>
+        <checker.version>2.5.6</checker.version>
         <collections.version>3.2.2</collections.version>
         <dbcp.version>1.4</dbcp.version>
         <dbcp2.version>2.5.0</dbcp2.version>
@@ -145,7 +153,7 @@
         <el-api.version>3.0.1-b06</el-api.version>
         <error-prone.version>2.3.2</error-prone.version>
         <geoip2.version>2.12.0</geoip2.version>
-        <guava.version>26.0-jre</guava.version>
+        <guava.version>27.0-jre</guava.version>
         <hateoas.version>0.25.0.RELEASE</hateoas.version>
         <hikaricp.version>3.2.0</hikaricp.version>
         <logback.version>1.2.3</logback.version>
@@ -157,7 +165,7 @@
         <jcommon.version>1.0.24</jcommon.version>
         <jfreechart.version>1.0.19</jfreechart.version> <!-- TODO: Upgrade to 1.5.0 -->
         <jhighlight.version>1.0.3</jhighlight.version>
-        <jmockit.version>1.41</jmockit.version>
+        <jmockit.version>1.43</jmockit.version>
         <jna.version>4.5.2</jna.version>
         <jsp-api.version>2.3.3</jsp-api.version>
         <jsr305.version>3.0.2</jsr305.version>
@@ -175,9 +183,9 @@
         <servlet-api.version>4.0.1</servlet-api.version>
         <sitemesh.version>2.4.2</sitemesh.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <spring.version>5.1.0.RELEASE</spring.version>
-        <spring-security.version>5.1.0.RELEASE</spring-security.version>
-        <text.version>1.4</text.version>
+        <spring.version>5.1.1.RELEASE</spring.version>
+        <spring-security.version>5.1.1.RELEASE</spring-security.version>
+        <text.version>1.6</text.version>
         <transaction-api.version>1.3</transaction-api.version>
         <tomcat.version>9.0.12</tomcat.version>
         <wrapper.version>3.2.3</wrapper.version>
@@ -195,9 +203,9 @@
         <compiler.plugin>3.8.0</compiler.plugin>
         <coveralls.plugin>4.3.0</coveralls.plugin>
         <dependency.plugin>3.1.1</dependency.plugin>
-        <dependency-check.plugin>3.3.2</dependency-check.plugin>
+        <dependency-check.plugin>3.3.4</dependency-check.plugin>
         <deploy.plugin>3.0.0-M1</deploy.plugin>
-        <formatter.plugin>2.7.5</formatter.plugin>
+        <formatter.plugin>2.8.1</formatter.plugin>
         <git-commit.plugin>2.2.5</git-commit.plugin>
         <gpg.plugin>1.6</gpg.plugin>
         <install.plugin>3.0.0-M1</install.plugin>
@@ -206,19 +214,19 @@
         <javadoc.plugin>3.0.1</javadoc.plugin>
         <jdeps.plugin>3.1.0</jdeps.plugin>
         <jspc.plugin>9.4.12.v20180830</jspc.plugin>
-        <jxr.plugin>2.5</jxr.plugin>
+        <jxr.plugin>3.0.0</jxr.plugin>
         <l10n.plugin>1.8</l10n.plugin>
         <license.plugin>3.0</license.plugin>
         <lifecycle-mapping.plugin>1.0.0</lifecycle-mapping.plugin>
         <modernizer.plugin>1.6.0</modernizer.plugin>
-        <pmd.plugin>3.10.0</pmd.plugin>
+        <pmd.plugin>3.11.0</pmd.plugin>
         <project-info.plugin>3.0.0</project-info.plugin>
         <release.plugin>2.5.3</release.plugin>
         <resources.plugin>3.1.0</resources.plugin>
         <site.plugin>3.7.1</site.plugin>
         <sonar.plugin>3.5.0.1254</sonar.plugin>
         <source.plugin>3.0.1</source.plugin>
-        <spotbugs.plugin>3.1.6</spotbugs.plugin>
+        <spotbugs.plugin>3.1.7</spotbugs.plugin>
         <surefire.plugin>2.22.1</surefire.plugin>
         <tidy.plugin>1.1.0</tidy.plugin>
         <versions.plugin>2.7</versions.plugin>
@@ -227,7 +235,7 @@
         <!-- Plugin Dependency Versions -->
         <build-tools.version>1.1.8</build-tools.version>
         <bugpattern.version>1.4.2</bugpattern.version>
-        <checkstyle.version>8.13</checkstyle.version>
+        <checkstyle.version>8.14</checkstyle.version>
         <doxia.version>1.8</doxia.version>
         <ecj.version>3.15.0</ecj.version>
         <fb-contrib.version>7.4.3.sb</fb-contrib.version>
@@ -841,10 +849,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.plugin}</version>
-                    <configuration>
-                        <!-- For java 9 and jmockit -->
-                        <argLine>-Djdk.attach.allowAttachSelf</argLine>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
